--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -6,7 +6,7 @@
 \addcontentsline{toc}{chapter}{Bibliografia}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%provare anche questo comando:
 %%%%%%%%%%%\addcontentsline{toc}{chapter}{\numberline{}{Bibliografia}}
-\bibitem{K1} Nome. Argomento \url{http://www.google.it}, 2013.
+\bibitem{K1} Nome. Argomento \url{https://kotlinlang.org/docs/reference/faq.html}, 2013.
 \bibitem{K2} Nome. Argomento \url{http://www.google.it}, 2014.
 \bibitem{K3} Nome. Argomento \url{http://www.google.it}, 2015.
 \bibitem{K4} Nome. Argomento \url{http://www.google.it}, 2016.
