--- a/Frontespizio.tex
+++ b/Frontespizio.tex
@@ -1,41 +1,35 @@
-\documentclass[12pt,a4paper]{report}
-\usepackage[italian]{babel}
-\usepackage{newlfont}
-\textwidth=450pt\oddsidemargin=0pt
-\begin{document}
 \begin{titlepage}
 \begin{center}
 {{\Large{\textsc{Alma Mater Studiorum $\cdot$ Universit\`a di
-Bologna}}}} \rule[0.1cm]{15.8cm}{0.1mm}
-\rule[0.5cm]{15.8cm}{0.6mm}
-{\small{\bf SCUOLA DI SCIENZE\\
-Corso di Laurea in Nome corso di Laurea }}
+Bologna}}}} \rule[0.1cm]{13.8cm}{0.1mm}
+\rule[0.5cm]{13.8cm}{0.6mm}
+{\bf SCUOLA DI SCIENZE\\
+Corso di Laurea in Informatica }
 \end{center}
-\vspace{15mm}
+\vspace{25mm}
 \begin{center}
-{\LARGE{\bf TITOLO}}\\
-\vspace{3mm}
-{\LARGE{\bf DELLA}}\\
-\vspace{3mm}
-{\LARGE{\bf TESI}}\\
-\end{center}
-\vspace{40mm}
-\par
-\noindent
-\begin{minipage}[t]{0.47\textwidth}
-{\large{\bf Relatore:\\
-Chiar.mo Prof.\\
-NOME RELATORE}}
+ {\large{\bf KOTLIN E FIREBASE}}\\
+ \vspace{2mm}
+ {\large{\bf UTILIZZI E FUNZIONALIT\'A}}\\
+ \vspace{2mm}
+ {\large{\bf DI UN APPLICAZIONE ANDROID}}\\
+ \end{center}
+ \vspace{30mm}
+ \par
+ \noindent
+ \begin{minipage}[t]{0.5\textwidth}
+ {\large{\bf Relatore:\\
+ Chiar.mo Prof.\\
+ LUCA BEDOGNI}}\\
+ \end{minipage}
+ \hfill
+ \begin{minipage}[t]{0.5\textwidth}\raggedleft
+ {\large{\bf Presentata da:\\
+ ALESSIO KOCI}}
 \end{minipage}
-\hfill
-\begin{minipage}[t]{0.47\textwidth}\raggedleft
-{\large{\bf Presentata da:\\
-NOME LAUREANDO}}
-\end{minipage}
-\vspace{20mm}
+\vspace{30mm}
 \begin{center}
-{\large{\bf Sessione\\%inserire il numero della sessione in cui ci si laurea
-Anno Accademico }}%inserire l'anno accademico a cui si è iscritti
+{\large{\bf Sessione III\\%inserire il numero della sessione in cui ci si laurea
+Anno Accademico 2017/18}}%inserire l'anno accademico a cui si Ã¨ iscritti
 \end{center}
 \end{titlepage}
-\end{document}
