--- a/Indice.tex
+++ b/Indice.tex
@@ -1,3 +1,4 @@
+\pagenumbering{roman}                   %serve per mettere i numeri romani
 \tableofcontents                        %crea l'indice
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%imposta l'intestazione di pagina
 \rhead[\fancyplain{}{\bfseries\leftmark}]{\fancyplain{}{\bfseries\thepage}}
